--- a/theme.yaml
+++ b/theme.yaml
@@ -1,7 +1,7 @@
 apiVersion: theme.halo.run/v1alpha1
 kind: Theme
 metadata:
-  name: theme-Joe3
+  name: theme-Joe3-zhtw
 spec:
   displayName: Theme Joe3
   author:
