--- a/theme.yaml
+++ b/theme.yaml
@@ -9,7 +9,7 @@ spec:
     website: "https://halo.run"
   description: Halo2.0主題 Joe3.0 (繁體中文版)
   logo: "https://wmimg.com/i/70/2023/08/64d3c41d5bde2.webp"
-  website: "https://www.jiewen.run"
+  website: "https://blog.o-w-o.cc"
   repo: "https://github.com/Keycatowo/halo-theme-joe3.0-zh-tw"
   settingName: "theme-Joe-setting"
   configMapName: "theme-Joe-configMap"
